--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <div id="currentHealth" class="CharHealthVar">6 / 7 </div>
 
 
-                <progress value="6" max="7">
+                <progress value="6" max="7" ID="myprogress"s>
                 </progress>
             </section>
             <div class="btn-group-subtract">
