--- a/index.html
+++ b/index.html
@@ -309,12 +309,17 @@
 
  if (currHealth <= (maxHealth / 2)) {
   document.getElementsByTagName("progress").item(0).style.color = "#B80F0A";
+	 console.log(currHealth);
+	 console.log('in the red');
 }
 if (currHealth > (maxHealth / 2) ) 
 {
   document.getElementsByTagName("progress").item(0).style.color = "#4ac900";
+		 console.log(currHealth);
+	 console.log('good to go');
 }
 }
+	     
   </script>	
 	
     <!-- jQuery Files -->
