--- a/index.html
+++ b/index.html
@@ -309,12 +309,16 @@
   document.getElementsByTagName("progress").item(0).style.color = rgb(184,15,10);
 	 console.log(currHealth);
 	 console.log('in the red');
+	 console.log('rgb 184 15 10 ');
+	 
 }
 if (currHealth > (maxHealth / 2) ) 
 {
   document.getElementsByTagName("progress").item(0).style.color = rgb(57,201,0);
 		 console.log(currHealth);
 	 console.log('good to go');
+		 console.log('rgb 57 201 0 ');
+
 }
 }
 	     
