--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
  document.getElementById("currentHealth").innerText = (currHealth) + "  /  " + (maxHealth); 
 
  if (currHealth <= (maxHealth / 2)) {
-  document.getElementsByTagName("progress").item(0).style.color = rgb(184,15,10);
+  document.getElementsByTagName("progress").item(0).style.color = 'rgba(184,15,10,0.8)';
 	 console.log(currHealth);
 	 console.log('in the red');
 	 console.log('rgb 184 15 10 ');
@@ -314,7 +314,7 @@
 }
 if (currHealth > (maxHealth / 2) ) 
 {
-  document.getElementsByTagName("progress").item(0).style.color = rgb(57,201,0);
+  document.getElementsByTagName("progress").item(0).style.color = 'rgba(57,201,0,0.8)';
 		 console.log(currHealth);
 	 console.log('good to go');
 		 console.log('rgb 57 201 0 ');
