--- a/ItemsPage.html
+++ b/ItemsPage.html
@@ -65,10 +65,10 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a href="#">Menu Example 01</a>
+                                        <a href="ItemsPage.html">Item Shop</a>
                                     </li>
                                     <li>
-                                        <a href="#">Menu Example 02</a>
+                                        <a href="index.html">Main Page</a>
                                     </li>
                                     <li>
                                         <a href="#">Menu Example 03</a>
