--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         </div>
 
         <br>
-        <br><button class="accordion">Inventory</button>
+        <br><button class="accordion" id="inventoryButton">Inventory</button>
         <div class="panelStats" id="inventoryPanel">
             <br>
             <section id='invStats'>
@@ -355,6 +355,7 @@
                 }
             });
         }
+        
     </script>
 
 
