--- a/contact.html
+++ b/contact.html
@@ -85,8 +85,7 @@
                         </h4>
                         <p class="mbr-text mbr-fonts-style mb-2 display-4">
                             I will reply as soon as possible</p>
-                        <h5 class="link mbr-fonts-style display-7"><a href="mailto:robvoiles@gmail.com" class="text-primary">Send us an
-                                email</a>
+                        <h5 class="link mbr-fonts-style display-7"><a href="mailto:robvoiles@gmail.com" class="text-primary">Email me here</a>
                         </h5>
                     </div>
                 </div>
