--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/gears-1-121x121.png" alt="Mobirise Website Builder" style="height: 3.8rem;">
+                        <img src="assets/images/gears-1-121x121.png" alt="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="index.html">Rob Voiles' Automation</a></span>
@@ -84,9 +84,8 @@
                             <strong>Email</strong>
                         </h4>
                         <p class="mbr-text mbr-fonts-style mb-2 display-4">
-                            I will reply as soon as possible</p>
-                        <h5 class="link mbr-fonts-style display-7"><a href="mailto:robvoiles@gmail.com" class="text-primary">Email me here</a>
-                        </h5>
+                            I will reply as soon as possible.</p>
+                        <h5 class="link mbr-fonts-style display-7"><a href="mailto:robvoiles@gmail.com" class="text-primary">Email me here</a></h5>
                     </div>
                 </div>
             </div>
@@ -145,7 +144,8 @@
             
         </div>
     </div>
-
+</section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+  
   
 </body>
 </html>
