--- a/documentation.html
+++ b/documentation.html
@@ -106,8 +106,7 @@
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
                     <img src="assets/images/stepsrecorder-795x563.png" alt="">
-                    <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">
-                        Image Description</p>
+                    <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Recorder Results</p>
                 </div>
             </div>
             <div class="col-12 col-lg">
