--- a/contact.html
+++ b/contact.html
@@ -68,10 +68,9 @@
     <div class="container">
         <div class="mbr-section-head">
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                <strong>Contacts</strong>
+                <strong>Contacts</strong><br><strong><br></strong><strong><br></strong>
             </h3>
-            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">
-                I may be reached by phone or email at:</h4>
+            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">I am located in Cookeville, TN and can travel if in-person action or discussion is required or preferred, but most projects can be completed remotely.<br><br>I may be reached by phone or email at:</h4>
         </div>
         <div class="row justify-content-center mt-4">
             <div class="card col-12 col-lg-6">
