--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
                 <strong>Contacts</strong><br><strong><br></strong><strong><br></strong>
             </h3>
-            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">I am located in Cookeville, TN and can travel if in-person action or discussion is required or preferred, but most projects can be completed remotely.<br><br>My contact details are below, and further down you can send me a message directly from here. I will get back as soon as possible.</h4>
+            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">My contact details are below, and further down you can send me a message directly from here.</h4>
         </div>
         <div class="row justify-content-center mt-4">
 
@@ -84,7 +84,7 @@
                             <strong>Email</strong>
                         </h4>
                         <p class="mbr-text mbr-fonts-style mb-2 display-4">
-                            I will reply as soon as possible.</p>
+                            Click below to open an email.</p>
                         <h5 class="link mbr-fonts-style display-7"><a href="mailto:robvoiles@gmail.com" class="text-primary">Email me here</a></h5>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                     <div class="card-box align-center">
                        
                         <h4 class="card-title mbr-fonts-style mb-2 display-2">
-                            <strong>Contact me</strong>
+                            <strong>Contact me here</strong>
                         </h4>
                         
                         <iframe src="https://robvoiles.atwebpages.com/insert-data.php" style="margin:0; width:100%; height:450px; border:none; overflow:hidden;"></iframe>
