--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
                         </h4>
                         <p class="mbr-text mbr-fonts-style mb-2 display-4">
                             Click below to open an email.</p>
-                        <h5 class="link mbr-fonts-style display-7"><a href="mailto:robvoiles@gmail.com" class="text-primary">Email me here</a></h5>
+                        <h5 class="link mbr-fonts-style display-7"><a href="mailto:robvoiles@gmail.com" class="text-primary">robvoiles@gmail.com</a></h5>
                     </div>
                 </div>
             </div>
