--- a/documentation.html
+++ b/documentation.html
@@ -128,32 +128,14 @@
     
     <div class="container">
         <div class="row mbr-white">
-            <div class="col-6 col-md-4 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
-                    <strong>About Me:</strong></h5>
-                <ul class="list mbr-fonts-style display-4">
-                    <li class="mbr-text item-wrap"><a href="contact.html" class="text-primary">Contact Me</a></li>
-                    <li class="mbr-text item-wrap"><a href="about.html" class="text-primary">Experience &amp; History</a></li><li class="mbr-text item-wrap"><a href="index.html" class="text-primary">Home</a></li>
-                    <li class="mbr-text item-wrap"><br></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"></h5>
-                <ul class="list mbr-fonts-style display-4"></ul>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"></h5>
-                <ul class="list mbr-fonts-style display-4">
-                    <li class="mbr-text item-wrap"><br></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"></h5>
-                <ul class="list mbr-fonts-style display-4">
-                    <li class="mbr-text item-wrap"><br></li>
-                </ul>
-            </div>
             
+            <div class="col-12 mt-1">
+                <p class="mbr-text mb-0 mbr-fonts-style mb-2 align-center display-7">
+                    Navigation:<br><br><a href="contact.html" class="text-primary">Contact Me</a>
+<br><a href="about.html" class="text-primary">Experience &amp; History</a>
+<br><a href="index.html" class="text-primary">Home</a><br>
+                </p>
+            </div>
         </div>
     </div>
 </section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
