--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                         <img src="assets/images/gears-1-121x121.png" alt="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-4" href="index.html">Rob Voiles' Automation</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-4" href="index.html">Voiles Automation</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -117,7 +117,7 @@
                             <strong>Contact me here</strong>
                         </h4>
                         
-                        <iframe src="https://voilesautomation.com/insert-data.php" style="margin:0; width:100%; height:560px; border:none; scrolling:no; overflow:hidden;"></iframe>
+                        <iframe src="https://voilesautomation.com/insert-data.php" style="margin:0; width:100%; height:450px; border:none; scrolling:no; overflow:auto;"></iframe>
 
                     </div>
                 </div>
