--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                         <img src="assets/images/gears-1-121x121.png" alt="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-4" href="index.html">Rob Voiles' Automation</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-4" href="index.html">Voiles Automation</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -69,8 +69,7 @@
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2">
                     <strong>About me:</strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5">
-                    I have worked in coding and automation for a decade, having tackled countless projects in a corporate enterprise setting. Over the years I have gathered a toolset of different languages and platforms such as Python or Autohotkey, JavaScript, C# or VB.Net,RPA platforms like BluePrism or UIPath as well as SQL or NoSQL database integrations.<br><br>I have created enterprise-wide applications for productivity tracking and database connectivity, suites of assistant tools based on the user requirements, analytics, and standalone processing bots that have saved millions of dollars in freed up employee time.<br><br>I believe in saving time and effort. Robots can do a lot, and do it fast, but we are possible of much more. Our time is valuable.</h4>
-                
+                    After a decade of having tackled countless projects in a corporate enterprise setting, I've decided to branch out on my own. Over the years I have gathered a toolset of different languages and platforms such as Python or Autohotkey, JavaScript, PHP, C# or VB.Net, SQL and noSQL database integrations, and several resources to tap to fill in just about everything else.<br><br>I have created enterprise-wide applications for productivity tracking and database connectivity, suites of assistant tools based on the user requirements, real-time analytics, and standalone processing bots that have saved millions of dollars in freed up employee time.<br><br>I believe in saving time and effort. Robots can do a lot, and do it fast, but we are possible of much more. Our time is valuable, why spend it doing something we don't have to?</h4>                
             </div>
         </div>
     </div>
