--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <img src="assets/images/gears-1-121x121.png" alt="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-4" href="index.html">Rob Voiles' Automation</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-4" href="index.html">Voiles Automation</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -88,7 +88,7 @@
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-1">
                     <strong>What I do:</strong></h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">I build applications to make life easier, to make your existing processes more efficient. Whatever tasks make up your business, there's always room to free more of your time back up.<br>&nbsp;<br>By analyzing your business' process, I can determine where and how you can implement automation. You may be able to free up hours, days, or months of work. Whatever the case may be, let me see what I can take off of your plate. There's nothing to lose - I'll hear out what you have for free, and use <a href="about.html" class="text-primary">my experience</a> to make the most impact with the least headache.<br><br></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">I build applications to make life easier, to make your existing processes more efficient. I try to Whatever tasks make up your business, there's always room to free more of your time back up.<br>&nbsp;<br>By analyzing your business' process, I can determine where and how you can implement automation. You may be able to free up hours, days, or months of work. Whatever the case may be, let me see what I can take off of your plate. There's nothing to lose - I'll hear out what you have for free, and use <a href="about.html" class="text-primary">my experience</a> to make the most impact with the least headache.<br><br></h4>
                 
             </div>
         </div>
@@ -140,7 +140,7 @@
         <div class="row justify-content-center">
             <div class="title col-12 col-md-9">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>What is the process?</strong></h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Contact me for an initial consultation for free. Not all processes are candidates for automation, and I am certainly not going to charge you to find out. Send me a short description of the process that you would like to automate and I will work with you to flush out possibilities. I may ask for a more detailed description, or a step-by-step walkthrough, and once we decide on what is possible I can give an estimate on cost and expenses depending on complexity and impact -- my job is to get you the maximum benefit. You won't pay any fee until the solution is deployed and the quality has been tested and assured.<br><br>If you're unsure where to start in describing your process to me, click<a href="documentation.html" class="text-primary"> here </a>for instructions on how to generate a detailed report of every single step.<br></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Contact me for an initial consultation for free. Not all processes are candidates for automation, and I am certainly not going to charge you to find out. Send me a short description of the process that you would like to automate and I will work with you to determine possibilities and options. Once we decide on what is possible I can give an estimate on cost and expenses depending on complexity and impact -- my job is to get you the maximum benefit for the least cost. I don't expect payment until the solution we agree on is deployed and the quality has been tested.<br><br>If you're unsure where to start in describing your process to me, click<a href="documentation.html" class="text-primary"> here </a>for instructions on how to easily generate a detailed report of what you do.<br></h4>
                 
             </div>
         </div>
