--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="contact.html">Home</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="contact.html">Contact&nbsp;</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="contact.html">Contact&nbsp;</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="about.html">My Experience</a></li></ul>
                 
                 
