--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
                 <strong>Contacts</strong><br><strong><br></strong><strong><br></strong>
             </h3>
-            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">My contact details are below, and further down you can send me a message directly from here.</h4>
+            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">My contact details and a form to reach me maybe found below.</h4>
         </div>
         <div class="row justify-content-center mt-4">
 
