--- a/about.html
+++ b/about.html
@@ -85,9 +85,10 @@
             
             <div class="col-12 mt-1">
                 <p class="mbr-text mb-0 mbr-fonts-style mb-2 align-center display-7">
-                    Navigation:<br><br><a href="contact.html" class="text-primary">Contact Me</a>
+                    Navigation:<br><br><br><a href="index.html" class="text-primary">Home</a><br>
+                    <a href="contact.html" class="text-primary">Contact Me</a>
 <br><a href="about.html" class="text-primary">Experience &amp; History</a>
-<br><a href="index.html" class="text-primary">Home</a><br>
+
                 </p>
             </div>
         </div>
