--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="row justify-content-center">
             <div class="title col-12 col-md-9">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>What is the process?</strong></h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Contact me for an initial consultation for free. Not all processes are candidates for automation, and I am certainly not going to charge you to find out. Send me a short description of the process that you would like to automate and I will work with you to determine possibilities and options. Once we agree on a project, I can give an estimate on cost and expenses depending on complexity and impact -- my job is to get you the maximum benefit for the least cost. I don't expect payment until the solution we agree on is deployed and the quality has been tested.<br></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7"><a href="contact.html" class="text-primary">Contact me</a>  for an initial consultation for free. Not all processes are candidates for automation, and I am certainly not going to charge you to find out. Send me a short description of the process that you would like to automate and I will work with you to determine possibilities and options. Once we agree on a project, I can give an estimate on cost and expenses depending on complexity and impact -- my job is to get you the maximum benefit for the least cost. I don't expect payment until the solution we agree on is deployed and the quality has been tested.<br></h4>
                 
             </div>
         </div>
