--- a/contact.html
+++ b/contact.html
@@ -67,9 +67,9 @@
     <div class="container">
         <div class="mbr-section-head">
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                <strong>Contacts</strong><br><strong><br></strong><strong><br></strong>
+                <strong>Contact Details</strong><br><strong><br></strong><strong><br></strong>
             </h3>
-            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">My contact details and a form to reach me maybe found below.</h4>
+            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">Contact me by email, phone, or send a message from here.</h4>
         </div>
         <div class="row justify-content-center mt-4">
 
@@ -79,11 +79,9 @@
                         <div class="image-wrapper">
                             <span class="mbr-iconfont mobi-mbri-letter mobi-mbri"></span>
                         </div>
-                        <h4 class="card-title mbr-fonts-style mb-2 display-2">
-                            <strong>Email</strong>
-                        </h4>
+                   
                         <p class="mbr-text mbr-fonts-style mb-2 display-4">
-                            Click below to open an email.</p>
+                            Email me at:</p>
                         <h5 class="link mbr-fonts-style display-7"><a href="mailto:robvoiles@gmail.com" class="text-primary">robvoiles@gmail.com</a></h5>
                     </div>
                 </div>
@@ -95,9 +93,7 @@
                         <div class="image-wrapper">
                             <span class="mbr-iconfont mobi-mbri-mobile-2 mobi-mbri"></span>
                         </div>
-                        <h4 class="card-title mbr-fonts-style align-center mb-2 display-2">
-                            <strong>Phone</strong>
-                        </h4>
+      
                         <p class="mbr-text mbr-fonts-style mb-2 display-4">
                             Send a text to:</p>
                         <h5 class="link mbr-black mbr-fonts-style display-7"><a href="tel:865-635-6689" class="text-primary">865-635-6689</a></h5>
