--- a/DirectionPage.txt.html
+++ b/DirectionPage.txt.html
@@ -7,7 +7,7 @@
         function detectIphone() {
             if(/iPhone/.test(navigator.userAgent) && !window.MSStream) {
                 // If an iPhone is detected, redirect to the specified URL
-                window.location.href = 'https://example.com/your-iphone-page';
+                window.location.href = 'https://robvoiles.github.io/RobV.vcf';
             }
         }
     </script>
