--- a/ContactPage.html
+++ b/ContactPage.html
@@ -5,32 +5,52 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Text Animation</title>
 <style>
+body {
+  background: #111;
+  color: #411;
+  font-family: Consolas, Courier, monospace;
+  text-shadow: 0 0 15px #411;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4vw; /* Responsive font size */
+}
+
+div {
+  text-align: center;
+}
+
+.glow {
+  color: #f00;
+  text-shadow: 0px 0px 10px #f00;
+}
+
+span {
+  display: inline-block;
+  padding: 0 5px;
+}
+
+/* Responsive adjustments */
+@media (max-width: 600px) {
   body {
-    background: #111;
-    color: #411;
-    font-family: Consolas, Courier, monospace;
-    font-size: 60px;
-    text-shadow: 0 0 15px #411;
-    height: 100vh; /* Use viewport height to ensure full coverage */
-    margin: 0; /* Reset default margin */
-    display: flex; /* Use flexbox for centering */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
+    font-size: 12px; /* Minimum font size for readability */
   }
+}
 
-  div {
-    text-align: center;
+@media (min-width: 601px) and (max-width: 1000px) {
+  body {
+    font-size: 3vw; /* Adjust for different screen sizes */
   }
+}
 
-  .glow {
-    color: #f00;
-    text-shadow: 0px 0px 10px #f00;
+@media (min-width: 1200px) {
+  body {
+    font-size: max(60px, 4vw); /* Cap the font size for very wide screens */
   }
+}
 
-  span {
-    display: inline-block;
-    padding: 0 5px; /* Adjust padding if necessary */
-  }
 </style>
 </head>
 <body>
