--- a/ContactPage.html
+++ b/ContactPage.html
@@ -29,7 +29,14 @@ div {
 
 span {
   display: inline-block;
-  padding: 0 5px; /* Adjust padding if necessary */
+  padding: 0 1px; /* Adjust padding if necessary */
+}
+.letter {
+  display: inline-block;
+  padding: 0 5px;
+  color: #f00; /* Optional: if you want the randomized text to also have the red color */
+  text-shadow: 0px 0px 10px #f00; /* Apply glow effect */
+  white-space: nowrap; /* Prevent splitting, apply carefully */
 }
 
 </style>
@@ -84,19 +91,20 @@ $(document).ready(function() {
     }
   }
   
-  function inc() {
+function inc() {
     if (letter_count < originalChars.length) {
-      var currentLetter = originalChars[letter_count];
-      $(".letter").eq(letter_count).html(currentLetter === ' ' ? '&nbsp;' : currentLetter).addClass("glow");
-      letter_count++;
-      if (letter_count < originalChars.length) {
-        setTimeout(inc, 100);
-      } else {
-        finished = true;
-      }
+        var currentLetter = originalChars[letter_count];
+        $(".letter").eq(letter_count).html(currentLetter === ' ' ? '&nbsp;' : currentLetter).removeClass("random-glow").addClass("glow");
+        letter_count++;
+        if (letter_count < originalChars.length) {
+            setTimeout(inc, 100);
+        } else {
+            finished = true;
+        }
     }
-  }
+}
 });
+
 </script>
 </body>
 </html>
